# rumba

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: index.html  performance.md
src/: api.rs  app.rs  auth.rs  keys.rs  log.rs  main.rs  models.rs  player.rs  sysvol.rs  ui.rs
