[package]
name = "rumba"
version = "0.1.0"
edition = "2021"
description = "A terminal UI music player for YouTube Music"
license = "MIT"
authors = ["Ayush Sharaf <dev.ayushsharaf@gmail.com>"]
repository = "https://github.com/ayush-sharaf/rumba"
homepage = "https://ayush-sharaf.github.io/rumba"
documentation = "https://github.com/ayush-sharaf/rumba#readme"
readme = "README.md"
keywords = ["youtube-music", "music", "tui", "terminal", "player"]
categories = ["command-line-utilities", "multimedia::audio"]
exclude = ["/docs", "/install.sh", "/.github", "/target"]

[[bin]]
name = "rumba"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
ytmapi-rs = { version = "0.3", features = ["reqwest"] }
reqwest = { version = "0.13", default-features = false, features = ["default-tls", "json", "http2", "gzip"] }
rookie = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
